--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0115)https://host.o2inc.net:8009/o2technologies/apply-jobs?id=a7bb6d92-e8b7-401a-9cb9-6b2c5ce5543d&source=ATS&provider=1 -->
-<html lang="en" data-critters-container="" class="light-theme"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+<html lang="en" data-critters-container="" class="light-theme">
+  <head 
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>O2.inc</title>
   <!--<base href="/">--><base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="Z40OY2XiC5Oiau2jip-ec0JTnUNUbEXG3gXCeI1ql14" />
   <meta name="robots" content="index, follow">
   <link rel="icon" type="image/x-icon" href="https://host.o2inc.net:8009/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com/">
